@@ -227,8 +227,10 @@ class SupervisordTests(unittest.TestCase):
                 'directory': None, 'umask': None, 'priority': 999, 'autostart': True,
                 'autorestart': True, 'startsecs': 10, 'startretries': 999,
                 'uid': None, 'stdout_logfile': None, 'stdout_capture_maxbytes': 0,
+                'stdout_events_enabled': False,
                 'stdout_logfile_backups': 0, 'stdout_logfile_maxbytes': 0,
                 'stderr_logfile': None, 'stderr_capture_maxbytes': 0,
+                'stderr_events_enabled': False,
                 'stderr_logfile_backups': 0, 'stderr_logfile_maxbytes': 0,
                 'redirect_stderr': False,
                 'stopsignal': None, 'stopwaitsecs': 10,
